# pyPicoSDK

./: .gitattributes  .gitignore  404.html  AGENTS.md  LICENSE  README.md  build_whl.bat  data.csv  deploy_docs.bat  example_5000a_block_capture.py  example_6000a_block_capture.py  example_6000a_siggen.py  index.html  main_6000a.py  objects.inv  picosdk.py  pypi.md  pyproject.toml  requirements.txt  search.html  setup.cfg  setup.py  timebase_calc.py  unpack_picostatus.py  version.py  version_main.py  version_updater.py
.github/workflows/: mkdocs_deploy.yml  python-package.yml  (+2 more)
api_docs/: README.md  picoscope-6000-series-a-api-programmers-guide.txt
build-tools/: README.md  build_docs.py  build_hook.py  build_pypi_doc.py  build_whl.bat  deploy_docs.bat  requirements.txt  version_updater.py
css/: mkdocstrings.css
docs/: mkdocs.yml  requirements.txt
examples/: advanced_block_capture.py  advanced_block_capture_downsampled.py  aux_advanced_trigger_block.py  block_queue_example.py  dead_time.py  enumerate_units.py  eres_res_enhance.py  example_5000a_block_capture.py  example_6000a_advanced_block_capture.py  example_6000a_aux_trigger_block.py  example_6000a_aux_trigger_block_capture.py  example_6000a_continuous_streaming.py  example_6000a_dead_time.py  example_6000a_fft.py  example_6000a_pk2pk_histogram.py  example_6000a_rapid_block.py  example_6000a_siggen.py  example_6000a_siggen_block_capture.py  example_6000a_simple_block_capture.py  example_6000a_simple_streaming.py  example_6000a_timebase.py  example_6000a_trigger_jitter_histogram.py  example_6000a_trigger_time_offset_bulk.py  example_6000a_trigger_time_offset_corrected.py  example_enumerate_units.py  examples_6000a_timebase.py  fft.py  pk2pk_histogram.py  probe_interaction_block.py  pulse_width_trigger.py  rapid_block.py  siggen_awg.py  siggen_sweep.py  simple_block_capture.py  streaming.py  streaming_plotted.py  timebase_calculation.py  tkinter_ui_example.py  trigger_time_offset_corrected.py  waterfall.py
picosdk/: README.md  constants.py  error_list.py  picosdk.py
pypicosdk/: README.md  __init__.py  _config.py  _exceptions.py  base.py  common.py  constants.py  convert.py  error_list.py  ps5000a.py  ps6000a.py  psospa.py  pypicosdk.py  streaming.py  version.py
raw_api_header_files/: PicoConnectProbes.h  PicoDeviceEnums.h  PicoDeviceStructs.h  PicoStatus.h  README.md  ps4000aApi.h  ps6000aApi.h  psospaApi.h
search/: search_index.json
tests/: advanced_trigger_test.py  aux_io_test.py  conversion_test.py  data_buffer_test.py  data_buffers_test.py  digital_port_test.py  memory_segments_test.py  over_range_test.py  plot_range_test.py  rapid_block_test.py  ratio_mode_test.py  simple_trigger_test.py  streaming_struct_test.py  streaming_test.py  time_axis_test.py  trigger_channel_properties_test.py  trigger_conditions_test.py  trigger_directions_test.py  trigger_info_test.py  values_trigger_time_offset_bulk_test.py
(+138 files in other folders)
