# Copyright (C) 2025-2025 Pico Technology Ltd. See LICENSE file for terms.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypicosdk"
dynamic = ["version"]
dependencies = ["numpy"]
keywords = [
    "test",
    "measurement",
    "hardware",
    "electronic"
]
description = "Modern Python wrapper for PicoSDK"
readme = "pypi.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Pico Technology", email = "support@picotech.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Development Status :: 1 - Planning"
]

[project.urls]
Documentation = "https://jamespicotech.github.io/pyPicoSDK/"
github = "https://github.com/JamesPicoTech/pyPicoSDK"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
include = ["pypicosdk/*"]

[tool.hatch.version]
path = "pypicosdk/version.py"
